@@ -6,9 +6,6 @@ Para esta version:
 -------------
 
 
-
--kempston mouse en cursor draw en menu abierto lee en apariencia aleatoriamente
-
 -text adventure map: opcion mostrar descripciones. localidad 14 por ejemplo se mezcla. en que juego??
 
 -Linux: al hacer alt-tab para ir a otra ventana, al volver con raton por ejemplo, el alt "sigue pulsado" en ZEsarUX
